Fix gap between menu and background image on shifted menu

--- a/static/scss/styles.scss
+++ b/static/scss/styles.scss
@@ -443,7 +443,7 @@ label {
   transition: .25s;
 
   &.shifted-right {
-    transform: translateX(80%);
+    transform: translateX(78%);
   }
 }
 
